[JSC] Fix duplicate `iterator.next` property access in `Set#union` https://bugs.webkit.org/show_bug.cgi?id=297194

Reviewed by Yusuke Suzuki.

`Set#union` C++ implementation added by https://commits.webkit.org/298316@main
was accessing `iterator.next` twice instead of once, causing test262 failures[1].

This patch fixes by using `iteratorDirect` with `forEachInIterationRecord` to
access the property only once.

[1]: https://build.webkit.org/#/builders/1232/builds/9714

* Source/JavaScriptCore/runtime/SetPrototype.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):

Canonical link: https://commits.webkit.org/298486@main